salesforce_sfdx/main/default/objects/CCI_Object_Store_Mapping__mdt/CCI_Object_Store_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping of Object store based on document type and document class.</description>
    <label>Object Store Mapping</label>
    <pluralLabel>Object Store Mapping</pluralLabel>
</CustomObject>