salesforce_sfdx/main/default/objects/CCI_Object_Store_Mapping__mdt/fields/Document_Class__c.field-meta.xml
<CustomField>
    <fullName>Document_Class__c</fullName>
    <label>Document Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLAIMS</fullName>
                <default>true</default>
                <label>CLAIMS</label>
            </value>
            <value>
                <fullName>INDIVIDUALUNDERWRITING</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>MEDRECBCBS</fullName>
            </value>
            <value>
                <fullName>MEMAPP</fullName>
            </value>
            <value>
                <fullName>MEMAUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>