salesforce_sfdx/main/default/objects/CCI_Object_Store_Mapping__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADJ</fullName>
                <default>true</default>
                <label>ADJ</label>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>COB</fullName>
            </value>
            <value>
                <fullName>COCC</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>RECON</fullName>
            </value>
            <value>
                <fullName>REVIW</fullName>
            </value>
            <value>
                <fullName>SUBRO</fullName>
            </value>
            <value>
                <fullName>APEAL</fullName>
            </value>
            <value>
                <fullName>MSP1</fullName>
            </value>
            <value>
                <fullName>MSP2</fullName>
            </value>
            <value>
                <fullName>MSP3</fullName>
            </value>
            <value>
                <fullName>MSP4</fullName>
            </value>
            <value>
                <fullName>MSP5</fullName>
            </value>
            <value>
                <fullName>MSP6</fullName>
            </value>
            <value>
                <fullName>DLTR</fullName>
            </value>
            <value>
                <fullName>AUTHR</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>OSCAR</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>ICOR</fullName>
            </value>
            <value>
                <fullName>INSD</fullName>
            </value>
            <value>
                <fullName>PRVCY</fullName>
            </value>
            <value>
                <fullName>APLS</fullName>
            </value>
            <value>
                <fullName>LSUIT</fullName>
            </value>
            <value>
                <fullName>MEREC</fullName>
            </value>
            <value>
                <fullName>MRCOR</fullName>
            </value>
            <value>
                <fullName>MEFAC</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>COC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>