salesforce_sfdx/main/default/objects/CCI_Object_Store_Mapping__mdt/fields/Object_Store__c.field-meta.xml
<CustomField>
    <fullName>Object_Store__c</fullName>
    <label>Object Store</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PaperClaimsOS</fullName>
                <default>true</default>
                <label>PaperClaimsOS</label>
            </value>
            <value>
                <fullName>MemAppOS</fullName>
            </value>
            <value>
                <fullName>LegalOS</fullName>
            </value>
            <value>
                <fullName>MedRecOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>